<?xml version="1.0"?>
<package format="2">
  <name>p2i_cast</name>
  <version>1.0.0</version>
  <description>The point cloud to image casting package</description>

  <maintainer email="yuc6@illinois.edu">yuc6</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
